# recipe_api

./: LICENSE  README.md  notes.md  pyproject.toml
.github/workflows/: run-tests.yml
src/app/: config.py  database.py  main.py
src/app/database/: models.py  session.py
src/app/models/: recipe.py
src/app/routes/: recipes.py
src/app/services/: recipe_services.py  recipes.py
tests/: conftest.py  test_recipes.py
tests/integration/: test_recipe_lifecycle.py
tests/unit/: test_recipes.py
