[project]
name = "recipe-api"
version = "0.1.0"
description = "REST api to manage recipes"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "pytest>=9.0.2",
    "sqlmodel>=0.0.37",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.5",
]
